# UniParser-Tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
cli/: README.md  main.py
cli/commands/: auth.py  fetch.py  health.py  parse.py  version.py
cli/core/: __init__.py  config.py  credentials.py  errors.py  input.py  output.py  parse_options.py  pipeline.py
mcp_server/: README.md  config.yaml  pyproject.toml
mcp_server/uniparser_mcp/: __init__.py  __main__.py  server.py
playground/: 01.quick_start.ipynb  03.vis.ipynb  04.use_callbacks.py  app.crop_images.ipynb  app.molecule_extracrtion.ipynb  private.semantic_recognition_pipeline.ipynb  private.semantic_recognition_vl.ipynb
playground/results/: aeb129da-4a36-4627-9cb2-c721def237f0.json
skills/UniParser-Tools/: SKILL.md  api-reference.md  data-classes.md  layout-types.md  notes.md  patterns.md  utilities.md
skills/UniParser-Tools/references/: notes.md
skills/UniParser-Tools/scripts/: fetch_by_token.py  lib_common.py  parse_document.py
tests/: conftest.py
tests/integration/: test_client_live.py
tests/unit/: test_cli.py  test_client.py  test_constant.py  test_convert.py  test_dataclass_primitives.py  test_dataclass_results.py  test_fileio.py  test_parse_options.py  test_skill_cli.py
tests/utils/: __init__.py  samples.py
uniparser_tools/: __init__.py
uniparser_tools/api/: clients.py
uniparser_tools/cli/: README.md  __init__.py  __main__.py  main.py
uniparser_tools/cli/commands/: auth.py  fetch.py  health.py  parse.py  version.py
uniparser_tools/cli/core/: config.py  defaults.py  input.py  output.py  pipeline.py
uniparser_tools/common/: constant.py  dataclass.py
uniparser_tools/order/: structure_order.py  xy_cut_exp.py
uniparser_tools/tools/caption_extraction/: main.py
uniparser_tools/utils/: bbox.py  convert.py  fileio.py  image.py  visualize_together.py
uniparser_tools/utils/templates/: visualize_together.html
