[project]
name = "uniparser-tools"
dynamic = ["version"]
description = "Document parser tools based on UniParser"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["ocr", "document-parser", "uniparser"]
dependencies = [
    "click>=8.1.0,<9",
    "PyMuPDF==1.25.4",
    "pytz==2024.2",
    "html5lib==1.1",
    "markdown==3.6",
    "latex2mathml==3.77.0",
    "pylatexenc==2.10",
    "tabulate==0.9.0",
    "pandas==2.3.3",
    "pillow>=10.4.0",
    "requests==2.32.4",
    "scipy==1.17.1",
    "numpy==1.26.4",
    "lxml==5.3.0",
    "jinja2==3.1.2",
    "PyYAML==6.0.2",
    "opencv-python-headless==4.10.0.84",
]

[project.urls]
Homepage = "https://github.com/dptech-corp/UniParser-Tools"
Repository = "https://github.com/dptech-corp/UniParser-Tools"
Documentation = "https://uniparser.dp.tech/"

[project.scripts]
uniparser = "uniparser_tools.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0,<76", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["uniparser_tools*"]

[tool.setuptools.package-data]
"uniparser_tools.utils" = ["templates/*.html"]

[tool.setuptools.dynamic]
version = { attr = "uniparser_tools.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4
extend-exclude = []

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E731", "E741", "W605", "W293", "W291"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["uniparser_tools"]
known-third-party = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "live: tests that hit a real UniParser backend (skipped unless UNIPARSER_TEST_API_KEY and UNIPARSER_TEST_HOST are set)",
]
