[project]
name = "uniparser-mcp"
version = "0.1.0"
description = "MCP server exposing UniParser HTTP API (stdio)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "uniparser-tools",
]

[tool.uv.sources]
uniparser-tools = { path = "../", editable = true }

[project.scripts]
uniparser-mcp = "uniparser_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uniparser_mcp"]
# 将仓库根目录的 config.yaml 打进 wheel 的 uniparser_mcp/，供已安装包加载默认参数
[tool.hatch.build.targets.wheel.force-include]
"config.yaml" = "uniparser_mcp/config.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: 需要可访问的 UniParser HTTP 服务（默认探测失败则 skip，可用 UNIPARSER_INTEGRATION=0 关闭）",
]
